Refactor according to the review comments